* Pugs::Doc::Hack.pod - mention smoke.yml as param to smokeserv-client.pl
git-svn-id: http://svn.pugscode.org/pugs@14377 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/Pugs/Doc/Hack.pod
+++ b/docs/Pugs/Doc/Hack.pod
@@ -27,9 +27,9 @@ Pugs::Doc::Hack - How to hack on Pugs
     $ cp util/smoker-example.yml ~/.smoker.yml
     $ $EDITOR ~/.smoker.yml
 
-    $ make smoke                           # generates a smoke.html
+    $ make smoke                  # generates smoke.html, smoke.yml
     # Optionally, submit your smoke report to the public smokeserver:
-    $ perl util/smokeserv/smokeserv-client.pl smoke.html
+    $ perl util/smokeserv/smokeserv-client.pl smoke.html smoke.yml
 
 =head1 DESCRIPTION
 
