--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,7 @@
 * Importing functions from Perl 5: `use perl5:CGI <header param>`
 * Array and Hashes now round-trips from Pugs to Perl 5 land and back
 * Passing unboxed values across runtimes no longer leaks memory
+* When embedding Perl 5.8+, Unicode flag is now on for Pugs-to-Perl5 strings
 
 === Lexical Syntax
 
@@ -148,6 +149,8 @@
 * POD variables: `$=DATA` and `@=DATA`
 * POD directives: `=begin`/`=end` and `=for` now terminate without `=cut`
 * `%h<>` now means `%h{}` -- the entire hash, not the empty string as key
+* `1<2>` is now a fatal error: Odd numbers of elements in Hash
+* List comprehension: `for 0 < list(@x) < 10 {...}`
 
 === Declarators and Operators
 
@@ -157,6 +160,8 @@
 * Typed declarations: `my Dog $fido`, `my T ($x, $y)`
 * Binding to qualified uninitialized symbols: `&fully::qualify := sub {...}`
 * Postfix operators can be called with a dot: `.++`, `$x.++`, `$x.\ ++`
+* Mid-block redeclaration no longer allowed: `my $x; { $x = 1; my $x = 2 }`
+* Smart matching against implicit invocation: `$obj ~~ .meth`, `$obj ~~ .[0]`
 
 === Blocks and Statements
 
@@ -168,6 +173,10 @@
 * `&last` and `&redo` now work in `repeat { ... }` and `loop {...}` blocks
 * `do {...}` is now a loop block that takes standard loop controls
 * New postfix `given` statement modifier: `.say given foo()`
+* `&take` now works in functions called from within a `gather {...}` block
+* `&take` no longer flattens array literals: `take [1,2,3];`
+* Implicit invocation in `when`: `when .true {...}`, `when .<key> {...}`
+* Loop topic is not forced into rw: `for 1..3 { $_++ }` now fails correctly
 
 === Regexes and Grammars
 
@@ -179,6 +188,10 @@
 * The main package is now ::Main, not ::main
 * Allow space-separated adverbial named arguments: `f( :x<foo> :$y :!z )`
 * Parse for the `proto` routine modifier: `proto method foo ($x) {...}`
+* Multi-dispatching now handles named, slurpy and optional arguments
+* Support for user-defined unary and optional-unary prefix macros
+* `sub f ($x is lazy) {...}` no longer evaluates $x more than once
+* `sub ($x = 0 is copy)` no longer allowed; say `sub ($x is copy = 0)` instead
 
 === Classes and Objects
 
@@ -186,13 +199,18 @@
 * Hyperised method calls: `$obj.>>meth`
 * Quantified method calls: `$obj.*meth`, `$obj.+meth` and `$obj.?meth`
 * Default expression for attributes: `class C { has $.x = 123 }`
+* Attribute-like method call syntax: `@.method(1)`, `$.method: 2, 3, 4`
+* Role mixins: `role R {...} class C does R {...}`
+* Circular mixin is no longer allowed: `role A does A`
 
-=== Built-in Functions
+=== Built-in Primitives
 
-* New `&quotemeta` primitive for escaping strings
-* New `&printf` primitive for formatted printing
+* New `&quotemeta` function for escaping strings
+* New `&printf` function for formatted printing
+* New `&comb` function, a dual to `&split` but matches the wanted parts
 * The `.as` method is renamed to `.fmt` for formatted printing 
 * Support for `%b` in formatted printing
+* The `.perl` method now returns Unicode strings
 
 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 ---
 
@@ -206,59 +224,20 @@
 * New `Perl6::Internals::emit_yaml` prim to dump AST programmatically
   as YAML
 * Implemented staleness checking for .yml/.pm loader
-* The following code is no longer allowed:
-    my $x;
-    {
-        $x = 1;
-        my $x = 2;
-    }
-* "role A does A" is not allowed anymore
-* "my $x; { $x; my $x }" now fails with a sensible error message
 * Allow $::x to mean exactly the same as $x
-* "sub ($x = 0 is copy)" is invalid; say "sub ($x is copy = 0)" instead
 * Pugs.Parser: $() now means $$/, @() means @$/, %() means %$/, etc
 * Added identity values for the builtin reduceable operators from S03
 * Implement hyperfold and hyperscan: [>>+<<] and [\>>+<<]
-* Unicode support for the embedded Perl5 bridge.  (This takes effect iff
-  the embedded Perl supports SvUTF8_on, typically Perl 5.8+.)
-* Pugs.Parser: Support for attribute call syntax
-    @.foo(1, 2, 3);     # self.foo(1,2,3).'@'
-    $.bar: 4, 5, 6;     # self.bar(4,5,6).'$'
-
-* Much improve multi dispatch system
-* Implement quantified method calls: $obj.*meth, $obj.+meth, $obj.?meth,
-  as well as quantified dynamic method calls: $obj.[+*?]$meth
-* User-defined macros now take effect even in prefix unary
-  and optional unary
-* "Odd numbers of elements in hash" is now made fatal
-  (it was not even a warning) to help shake out incorrect
-  usages of things like 1<2>
-* Pugs.Prim.Keyed: Instead of allowing "1.delete();" to return undef,
-  we now simply fail
 * Pugs.Eval: Autovivification is now constrainted by typed variables:
     my Hash $x;
     $x[0] = 1; # fails, as $x can _only_ vivify to Hash
 * Implement rudimentary "fail" control via $*FAIL_SHOULD_DIE
 * Reduce standalone blocks even if nested:
     { { { say 3 } } }
-* Make the closure trait blocks lazy
-* Repair "use perl5:Foo"
-* Implement smart matching against implicit invocation:
-    $obj ~~ .meth       # ?($obj.meth)
-    $obj ~~ .[0]        # ?($obj.[0])
-    $obj ~~ .<x>        # ?($obj.<x>)
-* Implement "when .[0]" and "when .<s>"
-* Implement hyper methods:
-    @obj>>meth
-    @obj.>>meth
-    @obj>>.meth
-    @obj.>>.meth
-    @obj\  .>>\  .meth
 * Reject named arguments that cannot find a matching named
   parameter or slurpy hash
     sub f () {...}
     f(y => 1); # used to bind silently, but now no more
-* "for 1..3 { $_++ }" should die, not survive
 * Primitive support for =@Array on both contexts
 * Remove Judy from the Pugs build process
 * Make system() nonfatal always; instead it merely sets $!
@@ -282,18 +261,8 @@
     repeat {
     }
     while 1;
-* Pugs.Eval: Allow "redo" to redo the first repeat loop
-	  (repeat.t now all passes.)
-* "sub f ($x is lazy) {...}" is now guaranteed to not evaluate
-  its argument more than once
 * Switch chained comparison such as "1 > 2 > die('not reached')
   to use "is lazy" parameters, so they can short-circuit properly
-* Fix expected outut of head-neck-tail in examples/:
-  [1,2,3].say should print "1 2 3\n", not "123\n"
-* Fix take [1,2,3]" shouldn't flatten into "take 1,2,3
-* fix a couple of old s{}{} instances. comb potentially faster using lvalue
-  substr instead of copying string
-* ".perl" now returns Unicode strings properly
 
 == Perl 6 on Perl 5 (under [misc/pX/Common/])
 
