--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,120 @@
-= Changes for 6.2.13 (r14380) - October 17, 2006
+= Changes for 6.2.13 (r14400) - October 17, 2006
 
-== Perl 6 Modules
+== Build System
+
+* Enabled Perl 5 embedding by default
+** For Windows users, Perl 5.8.x is required
+** Set the `PUGS_EMBED` environment variable to `noperl5` to disable this
+
+* Disabled prompting for Parrot embedding by default
+** Set the `PUGS_EMBED` environment variable to `parrot` to enable this
+
+* Support for compiling with GHC 6.6
+** GHC 6.4.1+ is still supported, but will discontinue in te next release
+
+== Feature Changes
+
+=== Perl 5 Interoperability
+
+* Array and Hashes now round-trips from Pugs to Perl 5 land and back
+* Importing functions from Perl 5: `use perl5:CGI <header param>`
+* Passing unboxed values across runtimes no longer leaks memory
+* When embedding Perl 5.8+, Unicode flag is now on for Pugs-to-Perl5 strings
+
+=== Lexical Syntax
+
+* Capture literals: `\($bar: 1, 2, 3, named => 4)`
+* Interpolation of chained calls: `"$foo.meth.meth.meth.meth()"`
+* List comprehension: `for 0 < list(@x) < 10 {...}`
+* Named character escapes: `"\c[LATIN CAPITAL LETTER Y]"`
+* New magical variables: `$?COMPILER` and `$?VERSION`
+* POD directives: `=begin`/`=end` and `=for` now terminate without `=cut`
+* POD variables: `$=DATA` and `@=DATA`
+* Signature literals: `:($foo is copy = 42, $, @)`
+* `"\123"` and `"\03"` are now errors; write `"\d123"` and `"\o03"` instead
+* `$::x` now means exactly the same a `$x`, instead of `$*x`
+* `%h<>` now means `%h{}` -- the entire hash, not the empty string as key
+* `($::('x'))` with two adjacent closing parens now parses correctly
+* `1<2>` is now a fatal error: Odd numbers of elements in Hash
+
+=== Declarators and Operators
+
+* Argument interpolation via prefix `|` and `|<<` 
+* Binding to qualified uninitialized symbols: `&fully::qualify := sub {...}`
+* Hyperised reduce operators: `[>>+<<]` and `[\>>+<<]`
+* Mid-block redeclaration no longer allowed: `my $x; { $x = 1; my $x = 2 }`
+* New infix comparison operators: `===` and `eqv`
+* Nullary reduction of builtin operators gives identity values: `[*]() === 1`
+* Postfix operators can be called with a dot: `.++`, `$x.++`, `$x.\ ++`
+* Prefix `=` now iterates on arrays as well: `=@array`
+* Short-circuiting chained comparison: `1 > 2 > die('foo')` no longer fails
+* Smart matching against implicit invocation: `$obj ~~ .meth`, `$obj ~~ .[0]`
+* Typed constraints on autovivification: `my Hash $x; $x[0] = 1` now fails
+* Typed declarations: `my Dog $fido`, `my T ($x, $y)`
+* `*` is now always a term, never a prefix operator
+
+=== Blocks and Statements
+
+* Implicit invocation in `when`: `when .true {...}`, `when .<key> {...}`
+* Loop topic is not forced into rw: `for 1..3 { $_++ }` now fails correctly
+* New `&break` and `&continue` primitives to use inside `when` blocks
+* New `&leave` primitive to exit from the innermost block
+* New postfix `given` statement modifier: `.say given foo()`
+* Support for `FIRST`, `NEXT`, `LAST` loop control blocks
+* Support for `START`, `PRE`, `POST`, `KEEP`, `UNDO`, `ENTER`, `LEAVE` blocks
+* Support for test-after `repeat {...} while EXPR;` blocks
+* Support for the `each` list interleaver: `for each(@a; @b) -> $x, $y {...}`
+* The `for` loop no longer double-flattens lists: `for %h.pairs -> $p {...}`
+* User-defined topicalizers: `if EXPR -> $x {...}`, `given EXPR -> $x {...}`
+* `&last` and `&redo` now work in `repeat {...}` and `loop {...}` blocks
+* `&take` no longer flattens array literals: `take [1,2,3];`
+* `&take` now works in functions called from within a `gather {...}` block
+* `BEGIN(...)`, `END(...)` etc are parsed as calls, not syntax errors
+* `do {...}` is now a loop block that takes standard loop controls
+
+=== Regexes and Grammars
+
+* Anonymous tokens and rules anchor on both ends: `123 ~~ token{2}` is false
+* New `s[...] = ...` syntax; `s[...][...]` is deprecated
+* Pugs::Compiler::Rule (PCR) replaced Parrot/PGE as the default engine
+* Support for `:c/:continue`, `<prior>`, and much more: see PCR's ChangeLog
+* `$()`, `@()` and `%()` parsed correctly as `$$/`, `@$/` and `%$/`
+
+=== Modules and Routines
+
+* Allow space-separated adverbial named arguments: `f( :x<foo> :$y :!z )`
+* Multi-dispatching now handles named, slurpy and optional arguments
+* Named arguments with no matching parameters is now an error
+* New `&sub.call($capture)` syntax to call without a caller frame
+* Parse for the `proto` routine modifier: `proto method foo ($x) {...}`
+* Precompiled `.pm.yml` files with mismatching AST version no longer loads
+* Support for user-defined unary and optional-unary prefix macros
+* The main package is now ::Main, not ::main
+* `sub ($x = 0 is copy)` no longer allowed; say `sub ($x is copy = 0)` instead
+* `sub f ($x is lazy) {...}` no longer evaluates $x more than once
+
+=== Classes and Objects
+
+* Attribute-like method call syntax: `@.method(1)`, `$.method: 2, 3, 4`
+* Circular mixin is no longer allowed: `role A does A`
+* Default expression for attributes: `class C { has $.x = 123 }`
+* Dynamic method calls: `$obj.$meth`
+* Hyperised method calls: `$obj.>>meth`
+* Quantified method calls: `$obj.*meth`, `$obj.+meth` and `$obj.?meth`
+* Reopening classes: `class C is also {...}`
+* Role mixins: `role R {...} class C does R {...}`
+
+=== Built-in Primitives
+
+* New `&comb` function, a dual to `&split` but matches the wanted parts
+* New `&printf` function for formatted printing
+* New `&quotemeta` function for escaping strings
+* Support for `%b` in formatted printing
+* The `&system` function no longer dies when the command does not exist 
+* The `.as` method is renamed to `.fmt` for formatted printing 
+* The `.perl` method now returns Unicode strings
+
+== Bundled Modules
 
 === New modules
 
@@ -117,148 +231,6 @@
 
 * Slides from Nathan Gray's "Practical Extraction with Perl 6" talk
 
-== Build System
-
-* Enabled Perl 5 embedding by default
-** For Windows users, Perl 5.8.x is required
-** Set the `PUGS_EMBED` environment variable to `noperl5` to disable this
-
-* Disabled prompting for Parrot embedding by default
-** Set the `PUGS_EMBED` environment variable to `parrot` to enable this
-
-* Support for compiling with GHC 6.6
-** GHC 6.4.1+ is still supported, but will discontinue in te next release
-
-== Feature Changes
-
-=== Perl 5 Interoperability
-
-* Importing functions from Perl 5: `use perl5:CGI <header param>`
-* Array and Hashes now round-trips from Pugs to Perl 5 land and back
-* Passing unboxed values across runtimes no longer leaks memory
-* When embedding Perl 5.8+, Unicode flag is now on for Pugs-to-Perl5 strings
-
-=== Lexical Syntax
-
-* Named character escapes: `"\c[LATIN CAPITAL LETTER Y]"`
-* `"\123"` and `"\03"` are now errors; write `"\d123"` and `"\o03"` instead
-* New magical variables: `$?COMPILER` and `$?VERSION`
-* Interpolation of chained calls: `"$foo.meth.meth.meth.meth()"`
-* Signature literals: `:($foo is copy = 42, $, @)`
-* Capture literals: `\($bar: 1, 2, 3, named => 4)`
-* POD variables: `$=DATA` and `@=DATA`
-* POD directives: `=begin`/`=end` and `=for` now terminate without `=cut`
-* `%h<>` now means `%h{}` -- the entire hash, not the empty string as key
-* `1<2>` is now a fatal error: Odd numbers of elements in Hash
-* List comprehension: `for 0 < list(@x) < 10 {...}`
-* `$::x` now means exactly the same a `$x`, instead of `$*x`
-
-=== Declarators and Operators
-
-* New infix comparison operators: `===` and `eqv`
-* `*` is now always a term, never a prefix operator
-* Argument interpolation via prefix `|` and `|<<` 
-* Typed declarations: `my Dog $fido`, `my T ($x, $y)`
-* Binding to qualified uninitialized symbols: `&fully::qualify := sub {...}`
-* Postfix operators can be called with a dot: `.++`, `$x.++`, `$x.\ ++`
-* Mid-block redeclaration no longer allowed: `my $x; { $x = 1; my $x = 2 }`
-* Smart matching against implicit invocation: `$obj ~~ .meth`, `$obj ~~ .[0]`
-* Short-circuiting chained comparison: `1 > 2 > die('foo')` no longer dies
-
-=== Blocks and Statements
-
-* `BEGIN(...)`, `END(...)` etc are parsed as calls, not syntax errors
-* Support for `START`, `PRE`, `POST`, `KEEP`, `UNDO`, `ENTER`, `LEAVE` blocks
-* Support for `FIRST`, `NEXT`, `LAST` loop control blocks
-* New `&leave` primitive to exit from the innermost block
-* New `&break` and `&continue` primitives to use inside `when` blocks
-* `&last` and `&redo` now work in `repeat { ... }` and `loop {...}` blocks
-* `do {...}` is now a loop block that takes standard loop controls
-* New postfix `given` statement modifier: `.say given foo()`
-* `&take` now works in functions called from within a `gather {...}` block
-* `&take` no longer flattens array literals: `take [1,2,3];`
-* Implicit invocation in `when`: `when .true {...}`, `when .<key> {...}`
-* Loop topic is not forced into rw: `for 1..3 { $_++ }` now fails correctly
-
-=== Regexes and Grammars
-
-* Pugs::Compiler::Rule (PCR) replaced Parrot/PGE as the default engine
-* Implemented `s[...] = ...` and deprecated `s[...][...]`
-
-=== Modules and Routines
-
-* The main package is now ::Main, not ::main
-* Allow space-separated adverbial named arguments: `f( :x<foo> :$y :!z )`
-* Parse for the `proto` routine modifier: `proto method foo ($x) {...}`
-* Multi-dispatching now handles named, slurpy and optional arguments
-* Support for user-defined unary and optional-unary prefix macros
-* `sub f ($x is lazy) {...}` no longer evaluates $x more than once
-* `sub ($x = 0 is copy)` no longer allowed; say `sub ($x is copy = 0)` instead
-* Named arguments with no matching parameters is now an error
-* New `&sub.call($capture)` syntax to call without a caller frame
-
-=== Classes and Objects
-
-* Dynamic method calls: `$obj.$meth`
-* Hyperised method calls: `$obj.>>meth`
-* Quantified method calls: `$obj.*meth`, `$obj.+meth` and `$obj.?meth`
-* Default expression for attributes: `class C { has $.x = 123 }`
-* Attribute-like method call syntax: `@.method(1)`, `$.method: 2, 3, 4`
-* Role mixins: `role R {...} class C does R {...}`
-* Circular mixin is no longer allowed: `role A does A`
-* Reopening classes: `class C is also {...}`
-
-=== Built-in Primitives
-
-* New `&quotemeta` function for escaping strings
-* New `&printf` function for formatted printing
-* New `&comb` function, a dual to `&split` but matches the wanted parts
-* The `.as` method is renamed to `.fmt` for formatted printing 
-* Support for `%b` in formatted printing
-* The `.perl` method now returns Unicode strings
-* The `&system` function no longer dies when the command does not exist 
-
---- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 --- >8 ---
-
-* Begin integration of new AST into Pugs. This AST is planned to be shared
-  with other implementations, so macros are portable even if they don't
-  operate on the source level
-* Added support for the `each` builtin, so now you can write
-    for each(@a; @b) -> $x, $y { ... }
-* New Prims: `Pugs::Safe::safe_getc` and `Pugs::Safe::safe_readline`,
-  allowing eval servers to interface an interactive Pugs
-* New `Perl6::Internals::emit_yaml` prim to dump AST programmatically
-  as YAML
-* Implemented staleness checking for .yml/.pm loader
-* Pugs.Parser: $() now means $$/, @() means @$/, %() means %$/, etc
-* Added identity values for the builtin reduceable operators from S03
-* Implement hyperfold and hyperscan: [>>+<<] and [\>>+<<]
-* Pugs.Eval: Autovivification is now constrainted by typed variables:
-    my Hash $x;
-    $x[0] = 1; # fails, as $x can _only_ vivify to Hash
-* Implement rudimentary "fail" control via $*FAIL_SHOULD_DIE
-* Reduce standalone blocks even if nested:
-    { { { say 3 } } }
-* Reject named arguments that cannot find a matching named
-  parameter or slurpy hash
-    sub f () {...}
-    f(y => 1); # used to bind silently, but now no more
-* Primitive support for =@Array on both contexts
-
-== Bug Fixes
-
-* in a "for" loop with rvalue lists, don't double-listify
-  its list elements.  This fixes the case of:
-    for %h.pairs -> $p { ... }
-  which used to make $p contain a seq instead of a pair
-* Allowed double-right-parens to end a "parens" structure:
-    (@(1))
-    (@::("foo"))
-  now all parses correctly without needing a whitespace
-* Pugs.Parser: Parse for
-    repeat {
-    }
-    while 1;
 == Perl 6 on Perl 5 (under [misc/pX/Common/])
 
 * Added make_build_perl5, to make it possible to build all the perl5 modules
@@ -271,7 +243,6 @@ XXX fglock: please write more here
 == Perl 5 to Perl 6 Translater (under [misc/pX/Common/P5_to_P6_Translation])
 
 XXX Sage: please write something here
-
 
 
 = Changes for 6.2.12 (r10930) - June 26, 2006
