more noun/verb agreement
git-svn-id: http://svn.pugscode.org/pugs@14387 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,7 +16,7 @@
 
 === Perl 5 Interoperability
 
-* Array and Hashes now round-trips from Pugs to Perl 5 land and back
+* Arrays and Hashes now round-trip from Pugs to Perl 5 land and back
 * Importing functions from Perl 5: `use perl5:CGI <header param>`
 * Passing unboxed values across runtimes no longer leaks memory
 * When embedding Perl 5.8+, Unicode flag is now on for Pugs-to-Perl5 strings
